Adjusted numeric input fields, styles and related tests for issue FF 29
The "enhanced" type="number" input introduced with Firefox 29 somehow is not
compatible with the jquery.validation plugin, and also is not responsive to some
Selenium actions.

All type="number" elements were changed to type="text" until a better solution
is found.

--- a/ui/static/css/sopin.css
+++ b/ui/static/css/sopin.css
@@ -39,7 +39,7 @@ footer {
     margin-top: 5px;
 }
 
-input[type=number] {
+input.number {
     text-align: right;
 }
 
